--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,19 @@ body {
 }
 
 
+h1 {
+    padding: 15px;
+}
+
+.container {
+    border: 5px solid blue;
+    border-radius: 5px;
+    margin-top: 35px;
+    width: 60%;
+    height: 20vh;
+}
+
+
 .btn {
     background-color: blue;
 }
